@@ -1,0 +1,6 @@
+#include "ipv6.h"
+
+/** IPv6 "any" address constant. */
+const ipv6addr IPV6ADDR_ANY = {{ 0,0,0,0,0,0,0,0 }};
+/** IPv6 loopback address constant. */
+const ipv6addr IPV6ADDR_LOOPBACK = {{ 0,0,0,0,0,0,0,1 }};
